--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,113 @@
   color: #61dafb;
 }
 
+.dark {
+  background-color: #000000;
+}
+
+.overText {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+  color: #ffffff;
+}
+
+.yearSection {
+  display: flex;
+  align-items: center;
+}
+
+.cardArea {
+  position: relative;
+  overflow: hidden;
+}
+
+.poster {
+  transition: all .5s ease-in-out;
+}
+
+.poster:hover {
+  transform: scale(1.1);
+}
+
+.detailsSection {
+  padding: 0rem 1rem;
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 2.4rem;
+  padding-right: 0.5rem;
+}
+
+.ratingsRoot {
+  display: flex;
+  align-items: center;
+}
+
+.ratingsContainer {
+  font-size: 1.5rem;
+  color: #e4bb24;
+}
+
+.subInfo {
+  display: flex;
+  margin: 1rem 0rem;
+  justify-content: flex-start;
+  font-size: 0.8rem;
+  opacity: 0.7;
+  color: #ffffff;
+}
+
+.ratingsContainer>i {
+  font-size: 0.7rem;
+  opacity: 0.5;
+  color: #ffffff;
+}
+
+.subInfo div {
+  padding: 0rem 1rem;
+  border-right: 2px solid rgb(255, 255, 255, 0.5);
+}
+
+.subInfo div:first-child {
+  padding-left: 0rem;
+}
+
+.subInfo div:last-child {
+  border-right: 0px;
+}
+
+.plot {
+  margin-bottom: 1rem;
+  line-height: 1.5rem;
+  font-size: 1.2rem;
+}
+
+.metaData {
+  margin: 1rem 0rem;
+}
+
+.metaLabel {
+  font-weight: bold;
+}
+
+.metaValue {
+  opacity: 0.7;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
